--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:latest
-    container_name: newPostgres2
+    container_name: newPostgres1
     environment:
       POSTGRES_USER: shanto
       POSTGRES_PASSWORD: 123456
@@ -12,13 +12,25 @@ services:
       - 5432:5432
     restart: unless-stopped
 
+  kafka:
+    image: bitnami/kafka:latest
+    container_name: kafka1
+    env_file:
+      - .env
+    ports:
+      - 9092:9092
+      - 9093:9093
+    volumes:
+      - kraft:/bitnami/kafka
+    restart: unless-stopped
+
   auth:
     build:
       context: .
       dockerfile: auth-service/app.dockerfile
     env_file:
       - .env
-    depends_on: 
+    depends_on:
       - postgres
     restart: on-failure
 
@@ -28,10 +40,22 @@ services:
       dockerfile: gateway/app.dockerfile
     env_file:
       - .env
-    depends_on: 
+    depends_on:
       - auth
+      - kafka
     ports:
       - 8080:8080
     restart: on-failure
 
-  
+  notification:
+    build:
+      context: .
+      dockerfile: notification-service/app.dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - kafka
+    restart: on-failure
+
+volumes:
+  kraft:
